--- a/.env.docker
+++ b/.env.docker
@@ -1,10 +1,10 @@
 DB_USERNAME=test
-DB_PASSWORD=test
+DB_PASSWORD=test1234
 DB_HOST=127.0.0.1
 DB_DBNAME=test
-DB_PORT=33061
+DB_PORT=3306
 
 REDIS_HOST=host.docker.internal
-REDIS_PORT=63791
+REDIS_PORT=6379
 
 JWT_SECRET_KEY=jwtsecret
