--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         poetry run pytest
 
-    - name: Trigger Jenkins deployment
-      if: success()
-      run: |
-        curl -X POST http://my-cicd-server-url/github-webhook/
+    # - name: Trigger Jenkins deployment
+    #   if: success()
+    #   run: |
+    #     curl -X POST http://my-cicd-server-url/github-webhook/
